test_out2.txt
  File "<string>", line 1
    "
    ^
SyntaxError: unterminated string literal (detected at line 1)
